<resources>
    <string name="app_name">Basic Banking App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users">Users</string>
    <string name="transactions">Transactions</string>
    <string name="name">Name</string>
    <string name="money">Money</string>
    <string name="nameLabel">Name:</string>
    <string name="account_no">Account No:</string>
    <string name="email">Email:</string>
    <string name="ifsc_code">IFSC Code:</string>
    <string name="mobile">Mobile:</string>
    <string name="current_balance">Current Balance:</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="amount_of_money">Amount of money</string>
    <string name="cancel">Cancel</string>
    <string name="balance_error">You don\'t have enough money</string>
    <string name="no_money_input">Please, enter the amount on money</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="amount">Amount:</string>
    <string name="no_transactions">No transactions found</string>
</resources>